tree-sitter/grammar.js
    source_file: $ => seq(
      $.module_declaration,
      repeat($.import_declaration),
      repeat($._declaration),
    ),

    // ========== MODULE DECLARATION ==========
    module_declaration: $ => seq(
      'module',
      field('name', $.module_identifier),
      field('exports', $.exposing_list),
    ),

    // Module identifier: composed of type_identifiers joined by dots
    // We parse it as a sequence rather than a regex to avoid token conflicts
    module_identifier: $ => prec.right(seq(
      $._module_segment,
      repeat(seq('.', $._module_segment)),
    )),

    // Module segment: reuse type_identifier token to avoid conflicts
    _module_segment: $ => $.type_identifier,

    exposing_list: $ => seq(
      'exposing',
      '(',
      sepBy(',', $.exposing_item),
      ')',
    ),

    exposing_item: $ => choice(
      seq(
        field('name', $.type_identifier),
        optional($.expose_all),
      ),
      field('name', $.identifier),
      field('name', $.operator_identifier),
    ),

    expose_all: $ => '(..)',

    // ========== IMPORTS ==========
    import_declaration: $ => seq(
      'import',
      field('module', $.module_identifier),
      optional(seq('as', field('alias', $.type_identifier))),
      optional(field('exposing', $.exposing_list)),
    ),

    // ========== DECLARATIONS ==========
    _declaration: $ => choice(
      $.type_declaration,
      $.type_alias_declaration,
      $.newtype_declaration,
      $.class_declaration,
      $.instance_declaration,
      $.foreign_import_declaration,
      $.type_signature,
      $.function_declaration,
      $.annotated_declaration,
    ),

    // Annotation (@derive, @primaryKey, etc.)
    // Use token.immediate to ensure ( is parsed with the annotation
    class_declaration: $ => prec.right(seq(
      'class',
      optional(seq(
        field('superclasses', $.constraint_list),
        '=>',
      )),
      field('name', $.type_identifier),
      field('parameters', repeat1($.class_parameter)),
      'where',
      field('methods', repeat1($.method_signature)),
    )),

    class_parameter: $ => prec(2, choice(
      $.type_variable,
      seq('(', $.type_variable, ':', $._kind, ')'),
    )),

    _kind: $ => prec.right(sepBy1('->', $._kind_atom)),

    method_signature: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.qualified_type),
    ),

    // Instance declaration - right assoc to consume all methods
    instance_declaration: $ => prec.right(seq(
      'instance',
      field('class', $.type_identifier),
      field('type', $.instance_type),
      'where',
      field('methods', repeat1($.method_definition)),
    )),

    instance_type: $ => repeat1($._type_atom),

    method_definition: $ => seq(
      field('name', $.identifier),
      '=',
      field('body', $._expression),
    ),

    // Foreign import
    foreign_import_declaration: $ => seq(
      'foreign',
      'import',
      $.calling_convention,
      field('symbol', $.string_literal),
      field('name', $.identifier),
      ':',
      field('type', $.qualified_type),
    ),

    calling_convention: $ => 'ccall',

    // Type signature: main : Task Unit Unit
    function_declaration: $ => seq(
      field('name', $._function_name),
      field('parameters', repeat($._pattern_atom)),
      '=',
      field('body', $._expression),
    ),

    _function_name: $ => choice(
      $.identifier,
      $.operator_identifier,
    ),

    operator_identifier: $ => seq(
      '(',
      $.operator,
      ')',
    ),

    // ========== TYPES ==========
    // Qualified types: optionally constrained
    // e.g. "Show a => a -> String" or just "Int -> String"
    qualified_type: $ => seq(
      optional(seq($.constraint_list, '=>')),
      $._type,
    ),

    constraint_list: $ => choice(
      $.constraint,
      seq('(', sepBy1(',', $.constraint), ')'),
    ),

    // A constraint is a class applied to type arguments
    // e.g. "Show a" or "Functor f"
    constraint: $ => prec(3, seq(
      field('class', $.type_identifier),
      field('arguments', repeat1($.type_variable)),
    )),

    _type: $ => $.function_type,

    function_type: $ => prec.right(PREC.ARROW, sepBy1('->', $.type_application)),

    // Type application: binary left-associative like Haskell tree-sitter
    // f a b parses as ((f a) b) rather than f (a, b)
    type_application: $ => choice(
      prec.left(PREC.CALL, seq(
        field('constructor', $.type_application),
        field('argument', $._type_atom),
      )),
      $._type_atom,
    ),

    _type_atom: $ => choice(
      $.type_identifier,
      $.type_variable,
      $.record_type,
      $.parenthesized_type,
      $.tuple_type,
      $.unit_type,
    ),

    parenthesized_type: $ => seq('(', $._type, ')'),

    _upper_identifier: $ => /[A-Z][a-zA-Z0-9_#]*/,
    type_identifier: $ => alias($._upper_identifier, $.type_identifier),
    // Type variables use external scanner to avoid consuming function declarations
    type_variable: $ => $._type_variable_ext,
    _expression: $ => choice(
      $.let_expression,
      $.case_expression,
      $.lambda_expression,
      $.do_expression,
      $.if_expression,
      $._binary_expression,
    ),

    _binary_expression: $ => choice(
      $.backward_pipe_expression,
      $.forward_pipe_expression,
      $.binary_expression,
      $._application_expression,
    ),

    binary_expression: $ => prec.left(PREC.CONCAT, seq(
      field('left', $._application_expression),
      field('operator', $.operator),
      field('right', $._binary_expression),
    )),

    _application_expression: $ => choice(
      $.function_application,
      $._accessor_expression,
    ),

    function_application: $ => prec.left(PREC.CALL, seq(
      field('function', $._accessor_expression),
      field('arguments', repeat1($._accessor_expression)),
    )),

    _accessor_expression: $ => choice(
      $.field_access_expression,
      $._primary_expression,
    ),

    _pattern_atom: $ => choice(
      $.wildcard_pattern,
      $.variable_pattern,
      $.literal_pattern,
      $.list_pattern,
      $.tuple_pattern,
      $.parenthesized_pattern,
      $.record_pattern,
      $.nullary_constructor_pattern,
    ),

    // Nullary constructor pattern - needs lower precedence than expressions
    variable_pattern: $ => prec(-2, alias($._identifier_ext, $.identifier)),

    // Lower precedence than expressions so they win in ambiguous contexts
    identifier: $ => $._identifier_token,

    // The word token - this must be an internal regex for tree-sitter keyword handling
    _identifier_token: $ => /[a-z_][a-zA-Z0-9_]*/,

    integer_literal: $ => choice(
      /0[xX][0-9a-fA-F]+/,
      /0[oO][0-7]+/,
      /0[bB][01]+/,
      /[0-9]+/,
    ),

    float_literal: $ => /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,

    char_literal: $ => seq(
      "'",
      choice(
        $.escape_sequence,
        token.immediate(/[^'\\]/),
      ),
      token.immediate("'"),
    ),

    // String literal - supports escape sequences and interpolation
    // Both "hello" and "hello ${name}" use the same rule
    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        alias($._string_content, $.string_content),
        $.interpolation,
      )),
      '"',
    ),

    // Content inside strings - avoid ", \, and $ (start of interpolation)
    _string_content: $ => token.immediate(prec(1, /[^"\\$]+/)),

    interpolation: $ => seq(
      '${',
      field('expression', $._expression),
      '}',
    ),

    // Multiline template strings: '' ... ''
    multiline_string: $ => seq(
      "''",
      repeat(choice(
        alias($._multiline_content, $.string_content),
        $.interpolation,
      )),
      "''",
    ),

    // Content in multiline strings - avoid $ (interpolation) and '' (delimiter)
    _multiline_content: $ => token.immediate(prec(1, /[^$']+/)),

    escape_sequence: $ => token.immediate(seq(
      '\\',
      choice(
        /[nrt\\'"0abfv]/,
        /x[0-9a-fA-F]{2}/,
        /u\{[0-9a-fA-F]+\}/,
        '${',  // Escaped interpolation
      ),
    )),

    // ========== OPERATORS ==========
    operator: $ => choice(
      '<>',
      '++',
      '&&',
      '||',
      '==',
      '/=',
      '<=',
      '>=',
      '<',
      '>',
      '+',
      '-',
      '*',
      '/',
      '^',
      '|>',
      '<|',
      '>>',
      '<<',
      '$',
    ),

    // ========== COMMENTS ==========
    line_comment: $ => token(seq('--', /[^\n]*/)),

    // Block comments with nesting support
    // Tree-sitter doesn't support true nested comments in pure grammar,
    // so we use a simplified approach that works for most cases
    block_comment: $ => seq(
      '{-',
      repeat(choice(
        $._block_comment_char,
        $.block_comment,  // Nested comments
      )),
      '-}',
    ),

    // Characters that are safe inside block comments
    // Avoids matching the start/end delimiters
    _block_comment_char: $ => token.immediate(/[^{}-]|[-{}]/),
  },
});

// Helper function for separated lists
function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}

function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}
